2005-02-07  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: 2.9.92.
	
	* configure.in:
	* src/Makefile.am:
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	Conditionnaly enable libgnomesu support. Closes #164244

2005-02-06  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.9.91.

2005-01-30  Benoît Dejean  <TazForEver@dlfp.org>

	* po/fr.po:
	* src/openfiles.c: (create_single_openfiles_dialog): Better title.

2005-01-24  Duarte Loreto <happyguy_pt@hotmail.com>

	* src/gnome-system-monitor.schemas.in: Fixed a typo 
	  (waring -> warning)

2005-01-24  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.9.90.

2005-01-22  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* src/openfiles.c: (add_new_files): Updated. Now displays localsock path.

2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (friendlier_hostname): Returns "" instead of ":0".

2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.h:
	* src/cellrenderer.h:
	* src/favorites.h:
	* src/infoview.h:
	* src/interface.h:
	* src/load-graph.h:
	* src/memmaps.h:
	* src/openfiles.h:
	* src/prettytable.h:
	* src/procactions.h:
	* src/procdialogs.h:
	* src/procman.h:
	* src/proctable.h:
	* src/util.h: G_GNUC_INTERNAL love.

2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: Fixed strings. Closes #164208.

2005-01-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (friendlier_hostname), (add_new_files): Prints hostname
	if available.
	
	(create_openfiles_tree): Fixed warning.

2005-01-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_hide_dialog): Closes #163959.
	Again :P

2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (create_openfiles_tree): Added comment. Closes #163957.

2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_hide_dialog):