@@ -1,3 +1,10 @@
+2005-02-08  Hongli Lai  <h.lai@chello.nl>
+
+	* configure.in, src/Makefile.am:
+	  Removed hard dependancy on libgnomesu.
+	* src/procdialogs.c (procdialog_create_root_password_dialog):
+	  Detect libgnomesu at runtime using GModule.
+
 2005-02-07  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* configure.in: 2.9.92.
